# SimulationFakeNews

./: CMakeLists.txt  Checker.cpp  Checker.h  Model.cpp  Model.h  Post.cpp  Post.h  README.md  User.cpp  User.h  main.cpp
DatasetModelFiles/: DataSetChecker.cpp  DataSetChecker.h  DatasetPost.cpp  DatasetPost.h  DatasetUser.cpp  DatasetUser.h  HTTPRequester.cpp  HTTPRequester.h  ModelDataset.cpp  ModelDataset.h  datasetstats.h  nota.txt
